JM_lab1_k8s/deployment-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dep-app-l1
  labels:
    app: app-l1
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: mc-app-l1
  template:
    metadata: 
      labels:
        app: mc-app-l1
    spec:
      containers:
        - name: app-l1
          image: multiapp-l1
          imagePullPolicy: Never
          ports:
            - containerPort: 80
