JM_lab1_k8s/service-app.yml
apiVersion: v1
kind: Service
metadata:
  name: service-app-l1
spec:
  type: NodePort
  selector:
    app: mc-app-l1
  ports:
    - port: 8080
      targetPort: 80
