JM_lab1_k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-l1
spec:
  rules:
    - http:
        paths:
          - path: /api/Joke             # шлях по якому відбувається перенаправлення на сервіс
            pathType: Prefix            # все, що починається з `/api` буде направлено на сервіс demo-service. Альтернативно можна використовувати `Exact` та `ImplementationSpecific`
            backend:
              service:
                name: service-api-l1    # ім'я сервісу
                port:
                  number: 8080          # порт на якому запущено сервіс
          # - path: /api/service2
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: service2-service
          #       port:
          #         number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-app-l1
                port:
                  number: 8080
